--- a/src/front/index.html
+++ b/src/front/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Omnomnom</title>
   <link
+    href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400,700"
+    rel="stylesheet">
+  <link
     href="//fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic"
     rel="stylesheet">
 </head>
